Calling the Knife project operator from Python crashes with segmentation fault. #44411

Closed
opened 2015-04-16 13:32:24 +02:00 by Miguel · 7 comments

System Information
Linux 3.13.0-44-generic

Blender Version
2.74

Short description of error
Calling the knife_project operator from Python crashes Blender with segmentation fault.

Exact steps for others to reproduce the error
I use the following code for overriding the context and calling the operator:

for window in bpy.context.window_manager.windows:
    screen = window.screen

    for area in screen.areas:
        if area.type == 'VIEW_3D':
            override = bpy.context.copy()
            override['window'] = window
            override['screen'] = screen
            override['area'] = area

            bpy.ops.mesh.knife_project(override)
            break

ready.blend

**System Information** Linux 3.13.0-44-generic **Blender Version** 2.74 **Short description of error** Calling the knife_project operator from Python crashes Blender with segmentation fault. **Exact steps for others to reproduce the error** I use the following code for overriding the context and calling the operator: ``` for window in bpy.context.window_manager.windows: screen = window.screen for area in screen.areas: if area.type == 'VIEW_3D': override = bpy.context.copy() override['window'] = window override['screen'] = screen override['area'] = area bpy.ops.mesh.knife_project(override) break ``` [ready.blend](https://archive.blender.org/developer/F163070/ready.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @vertice

Added subscriber: @vertice

This issue was referenced by 50522cba92

This issue was referenced by 50522cba927e7280fb88e216fd19278fc2290b52

Added subscriber: @mont29

Added subscriber: @mont29

Your code is not correct, you also need the 3DView region for this operator:

  for window in bpy.context.window_manager.windows:
      screen = window.screen
      for area in screen.areas:
          if area.type == 'VIEW_3D':
              for region in area.regions:
                  if region.type == 'WINDOW':
                      override = bpy.context.copy()
                      override['window'] = window
                      override['screen'] = screen
                      override['area'] = area
                      override['region'] = region
                      bpy.ops.mesh.knife_project(override)
                      break

That said, it should not crash, poll() function is not enough restrictive here, will fix.

Your code is not correct, you also need the 3DView region for this operator: ``` for window in bpy.context.window_manager.windows: screen = window.screen for area in screen.areas: if area.type == 'VIEW_3D': for region in area.regions: if region.type == 'WINDOW': override = bpy.context.copy() override['window'] = window override['screen'] = screen override['area'] = area override['region'] = region bpy.ops.mesh.knife_project(override) break ``` That said, it should not crash, poll() function is not enough restrictive here, will fix.
Bastien Montagne self-assigned this 2015-04-17 08:10:54 +02:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 50522cba92.

Closed by commit 50522cba92.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44411
No description provided.