Fix T44411: poll() function of MESH_OT_knife_project was not strict enough.

We need a 3DView region here, not only the 3DView...